--- a/pkg/webui/components/table/tabular.styl
+++ b/pkg/webui/components/table/tabular.styl
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 .container
-  overflow: auto
+  overflow: visible
   scrollbar-width: none
 
 .pagination
@@ -21,6 +21,7 @@
   text-align: center
 
   &-cell
+    overflow: visible
     padding-top: 0
     padding-bottom: 0
 
